--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ subjects:
 - !lcsh 'Fur farming'
 - !lcsh 'Skunks'
 - !lcc 'SF'
+- GITenberg
 title: Fur Farming for Profit, with Especial Reference to Skunk Raising
 url: http://www.gutenberg.org/ebooks/42888
